--- a/index.html
+++ b/index.html
@@ -1,43 +1,337 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-
-    <link rel="stylesheet" href="./assets/css/bootstrap-grid.min.css">
-    <!-- <link rel="stylesheet" href="./assets/css/bootstrap-utilities.min.css"> -->
-
-    <style>
-      * {
-        box-sizing: border-box;
-      }
-
-      .elem {
-        border: 1px solid black;
-        text-align: center;
-        padding: 10px;
-      }
-    </style>
+    <title>Column layout</title>
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/bootstrap-grid.min.css" />
+    <link rel="stylesheet" href="./assets/css/bootstrap-utilities.min.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    
-    <section>
+    <header class="first-screen">
       <div class="container">
+        <div class="row first-screen-first-row">
+          <div class="col-6 col-sm-6 col-md-12 col-lg-5 logo-wrapper">
+            <a class="link-logo" href="./index.html"
+              ><img
+                class="first-screen-logo"
+                src="./assets/imgs/WD.svg"
+                alt="logo"
+            /></a>
+          </div>
+          <nav class="col-6 col-sm-6 col-md-12 col-lg-7 d-flex align-items-center menu-nav">
+            <label for="burger-input" class="burger-label">
+              <img src="./assets/icons/menu.svg" alt="icon" />
+            </label>
+            <input type="checkbox" id="burger-input"/>
+            <ul class="menu-list">
+              <li><a class="link menu-link" href="#">ГЛАВНАЯ</a></li>
+              <li><a class="link menu-link" href="#skills">ОБ АВТОРЕ</a></li>
+              <li><a class="link menu-link" href="#projects">РАБОТЫ</a></li>
+              <li><a class="link menu-link" href="#video">ПРОЦЕСС</a></li>
+              <li><a class="link menu-link" href="#footer">КОНТАКТЫ</a></li>
+            </ul>
+          </nav>
+        </div>
         <div class="row">
-          <div class="elem col col-md-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, fugiat?</div>
-          <div class="elem col col-md-5">2</div>
-          <div class="elem col-3">4</div>
-          <div class="elem col-5">3</div>
+          <section
+            class="col-md-12 col-lg-6 d-flex justify-content-center align-items-center"
+          >
+            <img
+              class="first-screen-image"
+              src="./assets/imgs/Frame.svg"
+              alt="laptop"
+            />
+          </section>
+          <section class="col-md-12 col-lg-6 header-text-wrapper">
+            <h1 class="header first-screen-header">Дизайн и верстка</h1>
+            <p class="paragraph first-screen-paragraph">
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
+              на латинице с начала XVI века.
+            </p>
+            <a class="link button" href="#form">НАПИСАТЬ МНЕ</a>
+          </section>
         </div>
       </div>
-      <!-- 
-        col - растет или сужается в зависимости от контента (flex grow 1, flex shrink 1)
-        col-3 - минимум и максимум размера заданы (flex-basis, flex grow 0, flex shrink 0)
-        col col-sm-6 col-md-3 - на разных экранах разные ограничения размеров (flex-basis, flex grow 0, flex shrink 0 + media queries)
-       -->
-    </section>
-        
+    </header>
+    <main>
+      <section class="about-me">
+        <div class="container">
+          <div class="row justify-content-center">
+            <section class="col-lg-12 about-me-wrapper">
+              <h2 class="header">Обо мне</h2>
+              <p class="paragraph">
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+                вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
+                текстов на латинице с начала XVI века.
+              </p>
+            </section>
+          </div>
+        </div>
+      </section>
+
+      <section class="numbers">
+        <div class="container">
+          <div class="row numbers-row">
+            <section class="col-lg-2 col-md-4 col-sm-6 numbers-item">
+              <img src="./assets/icons/icon1.png" alt="icon" />
+              <div class="numbers-text-wrapper">
+                <h3>40+</h3>
+                <p class="numbers-paragraph">проектов</p>
+              </div>
+            </section>
+            <section class="col-lg-2 col-md-4 col-sm-6 numbers-item">
+              <img src="./assets/icons/icon1.png" alt="icon" />
+              <div class="numbers-text-wrapper">
+                <h3>40+</h3>
+                <p class="numbers-paragraph">проектов</p>
+              </div>
+            </section>
+            <section class="col-lg-2 col-md-4 col-sm-6 numbers-item">
+              <img src="./assets/icons/icon1.png" alt="icon" />
+              <div class="numbers-text-wrapper">
+                <h3>40+</h3>
+                <p class="numbers-paragraph">проектов</p>
+              </div>
+            </section>
+            <section class="col-lg-2 col-md-4 col-sm-6 numbers-item">
+              <img src="./assets/icons/icon1.png" alt="icon" />
+              <div class="numbers-text-wrapper">
+                <h3>40+</h3>
+                <p class="numbers-paragraph">проектов</p>
+              </div>
+            </section>
+            <section class="col-lg-2 col-md-4 col-sm-6 numbers-item">
+              <img src="./assets/icons/icon1.png" alt="icon" />
+              <div class="numbers-text-wrapper">
+                <h3>40+</h3>
+                <p class="numbers-paragraph">проектов</p>
+              </div>
+            </section>
+            <section class="col-lg-2 col-md-4 col-sm-6 numbers-item">
+              <img src="./assets/icons/icon1.png" alt="icon" />
+              <div class="numbers-text-wrapper">
+                <h3>40+</h3>
+                <p class="numbers-paragraph">проектов</p>
+              </div>
+            </section>
+          </div>
+        </div>
+      </section>
+
+      <section id="skills">
+        <div class="container">
+          <div class="row">
+            <section class="col-md-6 d-flex flex-column justify-content-center skills-text-wrapper">
+              <h2 class="header">Мои навыки</h2>
+              <div>
+                <article>
+                  <p>Adobe Photoshop</p>
+                  <div class="bg-progress">
+                    <div class="progress"></div>
+                  </div>
+                </article>
+                <article>
+                  <p>Adobe Photoshop</p>
+                  <div class="bg-progress">
+                    <div class="progress"></div>
+                  </div>
+                </article>
+                <article>
+                  <p>Adobe Photoshop</p>
+                  <div class="bg-progress">
+                    <div class="progress"></div>
+                  </div>
+                </article>
+              </div>
+            </section>
+            <section class="col-md-6 d-flex flex-column justify-content-center">
+              <img class="skills-img" src="./assets/imgs/img3.jpg" alt="" />
+            </section>
+          </div>
+        </div>
+      </section>
+
+      <section id="video">
+        <div class="container">
+          <div class="row">
+            <section class="col-12 d-flex flex-column align-items-center">
+              <h2 class="header">Как я работаю</h2>
+              <p class="paragraph">
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+                вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
+                текстов на латинице с начала XVI века.
+              </p>
+              <iframe
+                class="my-video"
+                src="https://www.youtube.com/embed/cd0xW9W8hqs"
+                frameborder="0"
+              ></iframe>
+            </section>
+          </div>
+        </div>
+      </section>
+
+      <section id="projects">
+        <div class="projects-row">
+          <article class="projects-item">
+            <div class="overlay">
+              <img
+                class="projects-icon"
+                src="./assets/icons/icon2.svg"
+                alt="icon"
+              />
+            </div>
+          </article>
+          <article class="projects-item">
+            <div class="overlay">
+              <img
+                class="projects-icon"
+                src="./assets/icons/icon2.svg"
+                alt="icon"
+              />
+            </div>
+          </article>
+          <article class="projects-item">
+            <div class="overlay">
+              <img
+                class="projects-icon"
+                src="./assets/icons/icon2.svg"
+                alt="icon"
+              />
+            </div>
+          </article>
+          <article class="projects-item">
+            <div class="overlay">
+              <img
+                class="projects-icon"
+                src="./assets/icons/icon2.svg"
+                alt="icon"
+              />
+            </div>
+          </article>
+        </div>
+        <div class="projects-row">
+          <article class="projects-item">
+            <div class="overlay">
+              <img
+                class="projects-icon"
+                src="./assets/icons/icon2.svg"
+                alt="icon"
+              />
+            </div>
+          </article>
+          <article class="projects-item">
+            <div class="overlay">
+              <img
+                class="projects-icon"
+                src="./assets/icons/icon2.svg"
+                alt="icon"
+              />
+            </div>
+          </article>
+          <article class="projects-item">
+            <div class="overlay">
+              <img
+                class="projects-icon"
+                src="./assets/icons/icon2.svg"
+                alt="icon"
+              />
+            </div>
+          </article>
+          <article class="projects-item">
+            <div class="overlay">
+              <img
+                class="projects-icon"
+                src="./assets/icons/icon2.svg"
+                alt="icon"
+              />
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <section class="clients">
+        <div class="container">
+          <div class="row">
+            <section
+              class="col-lg-12 d-flex justify-content-center clients-wrapper"
+            >
+              <img src="./assets/imgs/clients1.png" alt="client" />
+              <img src="./assets/imgs/clients1.png" alt="client" />
+              <img src="./assets/imgs/clients1.png" alt="client" />
+              <img src="./assets/imgs/clients1.png" alt="client" />
+            </section>
+          </div>
+        </div>
+      </section>
+
+      <section class="form" id="form">
+        <div class="container">
+          <div class="row justify-content-center">
+            <section class="col-12 form-wrapper">
+              <h2 class="header">Хотите веб-сайт?</h2>
+              <p class="paragraph">
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+                вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
+                текстов на латинице с начала XVI века.
+              </p>
+              <form action="" class="my-form">
+                <input
+                  class="my-form-input"
+                  type="text"
+                  name="name"
+                  placeholder="Ваше имя"
+                  pattern="[A-Z][a-z]{3,20}"
+                />
+                <input
+                  class="my-form-input"
+                  type="email"
+                  name="email"
+                  placeholder="Ваш e-mail"
+                  pattern="[^@ \t\r\n]+@[^@ \t\r\n]+\.[^@ \t\r\n]+"
+                />
+                <textarea
+                  class="my-form-input input-message"
+                  name="message"
+                  id=""
+                  cols="30"
+                  rows="8"
+                  placeholder="Сообщение"
+                ></textarea>
+                <button class="button form-button" type="submit">
+                  ОТПРАВИТЬ
+                </button>
+              </form>
+            </section>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer id="footer">
+      <div class="container">
+        <div class="row">
+          <section class="col-12 col-sm-6 footer-wrapper-first">
+            <h3 class="footer-header">Иванов Иван</h3>
+            <p>(с) 2018. Все права защищены.</p>
+          </section>
+          <section class="col-12 col-sm-6 footer-links footer-wrapper">
+            <a href="https://www.google.com/" target="_blank">
+              <img src="./assets/icons/vk.svg" alt="icon" />
+            </a>
+            <a href="https://www.google.com/" target="_blank">
+              <img src="./assets/icons/twitter.svg" alt="icon" />
+            </a>
+            <a href="https://www.google.com/" target="_blank">
+              <img src="./assets/icons/instagram.svg" alt="icon" />
+            </a>
+          </section>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
